Fix legend so they wrap

--- a/src/css/less/graph.less
+++ b/src/css/less/graph.less
@@ -22,7 +22,7 @@
 .graph-legend-alias,
 .graph-legend-value {
   float: left;
-  white-space: normal;
+  white-space: nowrap;
   font-size: 85%;
   text-align: left;
   &.current:before {
@@ -93,7 +93,7 @@
   .graph-legend-alias {
     padding-left: 7px;
     text-align: left;
-    width: 10%;
+    width: 95%;
   }
 
   .graph-legend-series:nth-child(odd) {
